--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <table cellspacing="20">
         <tr>
             <td><image src="Aya picture.jpg" alt="Ayako profile picture"></image></td>
-            <td>   <h1>Aya Bennett</h1> 
+            <td>
+                <h1>Aya Bennett</h1> 
                 <p><em>Corporate Travel Agent at <strong><a href="https://www.travelctm.com/">Corporate Travel Management</a></strong></em></p>
                 <p>I am a travel agent and hairdresser. I love doing exercises.</p>
             </td>
